--- a/style.css
+++ b/style.css
@@ -42,6 +42,15 @@ nav{
     margin-top: 10px;
     padding-top: 4px;
     gap: 13px;
+    
+    
+}
+
+.box:hover{
+    width: 31px;
+    height: 48px;
+    /* background: red; */
+
 }
 
 input{
@@ -57,7 +66,7 @@ input{
 }
 
 
-/* middle navigation css */
+/*-----------------middle navigation css--------------------*/
 .middle_nav ul{
     display: flex;
     gap: 150px;   
@@ -75,8 +84,105 @@ input{
 .middle_nav ul li img{
     width: 22px;
     height: 22.5px;
+    margin-top: 15px;
+     
+}
+
+/*----------------Left navigation-----------------------*/
+.left_nav ul{
+    display: flex;
+    gap: 30px;
+    margin-right: 40px;
+}
+
+.left_nav ul li{
+    list-style-type: none;
+}
+
+.left_nav ul li img{
+    width: 22px;
+    height: 22.5px;
     margin-top: 15px;  
 }
 
 
+/*---------Left Side Account Icon Plus Name-------------*/
+.fb_left img{
+    width: 28px;
+    height: 28px;
+    margin-top: 8px;
+    margin-left: 20px;
+}
+
+.fb_left ul1 {
+    display: flex;
+}
+
+.fb_left ul1 li{
+    list-style-type: none;
+}
+
+.fb_left ul1 li p{
+    margin-top: 16px;
+    margin-left: 15px;
+}
+
+.container2{
+    width: 360px;
+    gap-top:30px;
+    /* background-color: aqua; */
+}
+
+.body_left .container2{
+    margin-top: 30px;
+    margin-left: 20px;
+    /* border: 2px solid red; */
+}
+
+.body_left .container2 .fb_left:hover{
+    background-color: #eee;
+    border-radius: 10px;
+}
+
+.body_left .container2:active{
+    background-color: #eee;
+    border-radius: 10px;
+}
+.body_left .container2 .fb_left {
+    height: 44px;
+    cursor: pointer;
+}
+
+
+/*---------Left Side friend Icon Plus Name-------------*/
+.friends1 i{
+    margin-top: 5px;
+    margin-left: 12px;
+}
+
+.friends1{
+    margin-top: 10px;
+    width: 360px;
+    height: 44px;
+    gap-top:30px;
+    /* background-color: aqua; */
+    cursor: pointer;
+}
+.friends1 ul2{
+    display: flex;
+}
+
+.friends1 ul2 li{
+    list-style-type: none;
+}
+.friends1 ul2 li p{
+    margin-top: 14px;
+    margin-left: 10px;
+
+}
+
+.friends1:hover{
+    background-color: #eee;
+    border-radius: 10px;
+}
 
