--- a/style.css
+++ b/style.css
@@ -806,13 +806,14 @@ input#mind2 {
     background-color: #e4e6e8;
     padding: 10px;
     width: 250px;
-    height: 60px;
+    height: 50px;
     border-radius: 20px;
     margin-left: 70px;
     margin-top: -30px;
     font-size: 18px;
-}
 
+}
+    
 
 .f_img img{
     width: 24px;
@@ -843,7 +844,7 @@ input#mind3 {
     background-color: #e4e6e8;
     padding: 10px;
     width: 750px;
-    height: 60px;
+    height: 40px;
     border-radius: 20px;
     margin-left: 50px;
     margin-top: -20px;
@@ -859,7 +860,7 @@ input#mind3 {
 .circle {
     width: 15px;
     height: 15px;
-    background-color: #3ba424;
+    background-color: #31a14c;
     border-radius: 50%;
     position: absolute;
     top: 23px;
@@ -867,7 +868,7 @@ input#mind3 {
 }
 
 .ringring {
-    border: 3px solid #3ba424;
+    border: 3px solid #31a14c;
     -webkit-border-radius: 30px;
     height: 25px;
     width: 25px;
@@ -885,5 +886,64 @@ input#mind3 {
     height: 8px;
     margin-left: 11px;
 }
-
 /* ----------- Green Circle/Actoivate Icon CSS End----------- */
+/* ----------- Star Emoji  CSS Start -------------*/
+.star .fa-comment {
+    position: absolute;
+    margin-left: 680px;
+    margin-top: -10px;
+}
+/* ----------- Star Emoji  CSS End -------------*/
+/* ---------- Insert Emoji CSS Start----------- */
+.insert_emoji {
+    position: absolute;
+    margin-left: 600px;
+    margin-top: -10px;
+}
+/* --------- Insert Emoji CSS End----------- */
+
+.camera {
+    position: absolute;
+    margin-top: -9px;
+    margin-left: 640px;
+}
+
+.gif .fa-gif{
+    position: absolute;
+    margin-left: 500px;
+    margin-top: -10px;
+}
+
+i.x1b0d499.x1d69dk1 {
+    position: absolute;
+    margin-left: 800px;
+    margin-top: -50px;
+}
+
+i.x1b0d499.x1d69dk1 {
+    margin-top: -10px;
+    margin-left: 760px;
+}
+
+i.fa-solid.fa-comment {
+    margin-left: 730px;
+}
+i.fa-solid.fa-camera {
+    margin-left: 60px;
+}
+
+i.fa-regular.fa-face-smile {
+    margin-left: 71px;
+    margin-top: 2px;
+}
+
+.seo_middle{
+    width: 836px;
+    height: 100vh;
+    /* background-color: aqua;  */
+    margin-top: 710px;
+    margin-left: 610px;
+    border: 1px solid #eee;
+    border-radius: 10px;
+}
+
